<resources>
    <string name="app_name">IB BusTracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_back">Back</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_favourites">Favourites</string>
    <string name="nav_item_about">About</string>

    <!-- Navigation drawer item labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_favourites</item>
        <item>@string/nav_item_about</item>
    </string-array>

    <string name="title_favourites">Favourites</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intermediate_map">IntermediateMapActivity</string>


    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <!--Favourites Screen-->
    <string name="fav_item_icon_description">Favourite Item Icon</string>
    <string name="fav_item_icon2_description">Favourite Item More Icon</string>
    <string name="hint_fav_item_name">Name</string>
    <string name="hint_fav_item_descr">Description</string>
    <string name="hint_fav_item_address">Enter Place Address</string>
    <string name="btn_add_fav_item">Add</string>
    <string name="btn_update_fav_item">Update</string>
    <string name="btn_delete_fav_item">Delete</string>
    <string name="btn_refresh_fav_item_list">Refresh</string>
    <string name="title_activity_search_screen">SearchScreen</string>

    <string name="google_app_id">499829945363</string>

    <!-- MODEL -->
    <string name="offline">Bus currently offline.</string>
    <string name="less_one_minute">Less than 1 minute</string>
    <string name="one_minute">1 minute</string>
    <string name="minutes">" minutes"</string>
    <string name="hour">1 hour</string>
    <string name="hours">" hours"</string>
    <string name="hours_and">" hours and "</string>
    <string name="hour_and_one_min">1 hour and 1 minute</string>
    <string name="hour_and">"1 hour and "</string>
    <string name="via">"via "</string>
    <string name="next_bus_in">Next Bus In:</string>

    <string name="title_activity_route_screen">RouteScreen</string>

    <string name="icon_location_item">Location Icon</string>
    <string name="icon_bus_line">Bus Line Icon</string>
    <string name="icon_more">More</string>
    <string name="icon_logo">IB BusTracker Logo</string>
    <string name="recent_locations">Recently searched locations</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!--MAP TYPE-->
    <string name="action_map_normal">Normal</string>
    <string name="action_map_terrain">Terrain</string>
    <string name="action_map_hybrid">Hybrid</string>
    <string name="action_map_satellite">Satellite</string>
    <string name="action_map_clear">Clear Map</string>
    <string name="action_map_find_stations">Find Bus Stations</string>
    <string name="action_map_get_directions">Get Directions</string>

    <!--PLACE PICKER-->
    <string name="where_to_travel">Where do you want to travel?</string>
    <string name="hint_loc_from">From:</string>
    <string name="hint_loc_to">To:</string>
    <string name="error_loc_missing">Please enter both traveling points</string>

    <!--ABOUT TAB-->
    <string name="version">Version 1</string>
    <string name="feedback">Send feedback</string>
    <string name="opinions">Tell us what you think</string>
    <string name="report">Report a problem</string>
    <string name="report2">Let us know about a bug or problem</string>
    <string name="description">The app is build on the idea that people should use the technology in order to reduce or totally avoid the time spend on waiting for the bus </string>
    <string name="developers">Developers:</string>
    <string name="names">Ivan and Aleksandr</string>
</resources>
