<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_loc_missing"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutLabel">

        <AutoCompleteTextView
            android:id="@+id/pop_up_edit_loc_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fav_screen_input_margin_top"
            android:hint="@string/hint_loc_from" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextInputLayoutLabel">

        <AutoCompleteTextView
            android:id="@+id/pop_up_edit_loc_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/fav_screen_input_margin_top"
            android:hint="@string/hint_loc_to" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>